--- a/index.html
+++ b/index.html
@@ -1,52 +1,47 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Pablo&#39;s blog : ">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Pablo&#39;s blog</title>
+    <title>Pablo&#39;s blog by gomesp</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/gomesp/pablo.gomes.nz">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>Pablo&#39;s blog</h1>
+        <h2></h2>
 
-          <h1 id="project_title">Pablo&#39;s blog</h1>
-          <h2 id="project_tagline"></h2>
+        <section id="downloads">
+          <a href="https://github.com/gomesp/pablo.gomes.nz/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/gomesp/pablo.gomes.nz/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/gomesp/pablo.gomes.nz" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/gomesp/pablo.gomes.nz/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/gomesp/pablo.gomes.nz/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. </p>
+    <div class="container">
+      <section id="main_content">
+        <p>Hello! I'm not quite ready for production yet so in the meantime please <a href="https://twitter.com/pablogl">tweet me</a> or e-mail me at pablo at gomes.nz.</p>
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Pablo&#39;s blog maintained by <a href="https://github.com/gomesp">gomesp</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-681782-12");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
 
   </body>
 </html>
