Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="container">
       <section id="main_content">
-        <p>Hello! I'm not quite ready for production yet so in the meantime please <a href="https://twitter.com/pablogl">tweet me</a> or e-mail me at pablo at gomes.nz.</p>
+        <p>Hello! I'm not quite ready for production yet so in the meantime please <a href="https://twitter.com/pablogl">tweet me</a> or <a href="mailto:pablo@gomes.nz">e-mail me</a>.</p>
       </section>
     </div>
 
