Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Pablo&#39;s blog : ">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Pablo&#39;s blog by gomesp</title>
+    <title>Pablo&#39;s blog</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Pablo&#39;s blog</h1>
-        <h2></h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/gomesp/pablo.gomes.nz">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/gomesp/pablo.gomes.nz/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/gomesp/pablo.gomes.nz/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/gomesp/pablo.gomes.nz" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Pablo&#39;s blog</h1>
+          <h2 id="project_tagline"></h2>
 
-    <div class="container">
-      <section id="main_content">
-        <p>Hello! I'm not quite ready for production yet so in the meantime please <a href="https://twitter.com/pablogl">tweet me</a> or <a href="mailto:pablo@gomes.nz">e-mail me</a>.</p>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/gomesp/pablo.gomes.nz/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/gomesp/pablo.gomes.nz/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>Hi #NZSecretSanta! I have 2 lovely kids: a 5 (and a half) year old boy (Lucas) and a 3 year old girl (Malou). Could you make them believe in Santa please?</p>
+
+<p>My son loves anything that goes fast. And he just discovered the world of Star Wars. He loves super-heroes, specially the Hulk. But he also loves Superman, Spider-man, Iron-man. And he's also quite a bookworm.</p>
+
+<p>My daughter is Dora's biggest fan in the entire world. Anything Dora related will get much love and plenty of smiles.</p>
+
+<p>Thanks for making my kids believing in Santa for a little longer. That's the best present I could get. :) </p>
       </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Pablo&#39;s blog maintained by <a href="https://github.com/gomesp">gomesp</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
     </div>
 
               <script type="text/javascript">
@@ -42,6 +59,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
